# avixy_cloudwalk

./: .gitmodules  readme.md
apps/: readme.md
apps/CloudwalkHelloWorld/: CMakeLists.txt
apps/CloudwalkHelloWorld/resources/: desc.ini  main  shared
apps/CloudwalkHelloWorld/src/: helloWorld.c
